Revision history for Perl module Parse::Dia::SQL.

0.21 Mon Jul 23 12:53:23 CEST 2012
    - Added 'html' output options (thanks to Peter Langton).
      Check generated html with XML::DOM::Parser and HTML::Lint.

0.20 Mon Jan 30 14:19:46 CET 2012 
    - Added `backticks` to constraint creation, drop table, 
      drop index for MySQL-InnoDB.

0.19 Tue Jan 24 13:19:12 CET 2012
    - Added `backticks` support for MySQL-InnoDB (tables only).

0.18 Wed Jan 11 15:45:42 CET 2012
    - Added support for table options (see
      t/data/table_output_options.dia)

0.17 Wed Feb 16 11:02:44 CET 2011
    - RT #58189: Enable log level in command line arguments.
	(reported by ELACOUR@cpan.org) 
    - RT #62131 (reported by Felix Ostmann):
      - Associations incorrectly named in many-to-many 
        relationships.
      - Add --uml support. 
    - RT #57842 postgres: serial -> int not working 
      (reported by shemgp).

0.16 Fri May 21 07:20:43 CEST 2010
    - RT #57182 Encoding for insert statements in UML components 
      (reported by Gaudenz Steinlin).
    - Final preparations for debian release.

0.15 Thu Apr 15 22:32:41 CEST 2010
    - RT #56357 - Detect Dia database shapes and added 
      experimental parsing (excluding associations) 
      (reported by John-Paul Drawneek).
    - Added LICENSE to conform with debian standards.

0.14 Fri Feb  5 20:13:09 CET 2010
    - RT #53782 - Add typemap support (reported by Jani Päijänen).

0.13 Sun Dec 20 13:01:41 CET 2009
    - RT #52755 - Add support for Postgres unique constraints
      using the smallpackage stereotype (reported by shemgp).
    - RT #50906 - Added PostgreSQL synonyms int2, int4, int8 to
      integer, smallint and bigint respectively (reported by Edy
      Incoletti.
    - Added ignore_type_mismatch option which allows foreign keys
      to have a different + type than the primary key it
      references

0.12 Thu Nov 12 10:51:28 CET 2009 
    - RT #51433 - Multipicity (sic) not handled correctly 